--- a/Last-Subject/WebContent/WEB-INF/web.xml
+++ b/Last-Subject/WebContent/WEB-INF/web.xml
@@ -1,6 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>Last-Subject</display-name>
+  <context-param>
+    <param-name>/login.do</param-name>
+    <param-value>jp.co.comnic.javalesson.webapp.lastsubject.controller.LoginAction</param-value>
+  </context-param>
+  <context-param>
+    <param-name>/logout.do</param-name>
+    <param-value>jp.co.comnic.javalesson.webapp.lastsubject.controller.LogoutAction</param-value>
+  </context-param>
+  <servlet>
+    <servlet-name>Login</servlet-name>
+    <jsp-file>/login.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>Login</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
