--- a/Last-Subject/WebContent/WEB-INF/web.xml
+++ b/Last-Subject/WebContent/WEB-INF/web.xml
@@ -9,6 +9,11 @@
     <param-name>/logout.do</param-name>
     <param-value>jp.co.comnic.javalesson.webapp.lastsubject.controller.LogoutAction</param-value>
   </context-param>
+   <context-param>
+    <param-name>/Schedule/insert.do</param-name>
+    <param-value>jp.co.comnic.javalesson.webapp.lastsubject.controller.InsertAction</param-value>
+  </context-param>
+  
   <servlet>
     <servlet-name>Login</servlet-name>
     <jsp-file>/login.jsp</jsp-file>
@@ -17,6 +22,16 @@
     <servlet-name>Login</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <servlet-name>ScheduleNew</servlet-name>
+    <jsp-file>/new.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ScheduleNew</servlet-name>
+    <url-pattern>/new</url-pattern>
+  </servlet-mapping>
+ 
+ 
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
