--- a/Last-Subject/WebContent/WEB-INF/web.xml
+++ b/Last-Subject/WebContent/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     <param-value>jp.co.comnic.javalesson.webapp.lastsubject.controller.LogoutAction</param-value>
   </context-param>
    <context-param>
-    <param-name>/Schedule/insert.do</param-name>
+    <param-name>/insert.do</param-name>
     <param-value>jp.co.comnic.javalesson.webapp.lastsubject.controller.InsertAction</param-value>
   </context-param>
   
