--- a/Last-Subject/WebContent/WEB-INF/web.xml
+++ b/Last-Subject/WebContent/WEB-INF/web.xml
@@ -10,7 +10,7 @@
     <param-value>jp.co.comnic.javalesson.webapp.lastsubject.controller.LogoutAction</param-value>
   </context-param>
    <context-param>
-    <param-name>/schedulePK/insert.do</param-name>
+    <param-name>/schedule/insert.do</param-name>
     <param-value>jp.co.comnic.javalesson.webapp.lastsubject.controller.InsertAction</param-value>
   </context-param>
   
@@ -31,6 +31,11 @@
     <url-pattern>/new</url-pattern>
   </servlet-mapping>
  
+   <resource-ref>
+  	<res-ref-name>ds/last_subject</res-ref-name>
+  	<res-type>javax.sql.DataSource</res-type>
+  	<res-auth>Container</res-auth>
+  </resource-ref>
  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
